started working on javascript & firebase stuff

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/logic.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -23,12 +24,12 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h3>Your Pick</h3>
-                    <img id="user-pick" class="img-fluid" src="assets/images/question.png" alt="?">
+                    <h3>Player 1</h3>
+                    <img id="player-1" class="img-fluid" src="assets/images/question.png" alt="?">
                 </div>
                 <div class="col">
-                    <h3>Opponents Pick</h3>
-                    <img id="opponent-pick" class="img-fluid" src="assets/images/question.png" alt="?">
+                    <h3>Player 2</h3>
+                    <img id="player-2" class="img-fluid" src="assets/images/question.png" alt="?">
                 </div>
             </div>
             <div class="row">
